Enhance Biome configuration and IDE integration by adding new linting rules, updating package scripts, and refining editor settings. Adjust global styles and layout for improved consistency.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev:path": "pathpida --ignorePath .gitignore --watch",
     "build": "pathpida --ignorePath .gitignore && next build --turbopack",
     "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
+   "lint": "biome check ./src",
+    "lint:fix": "biome lint --write ./src",
+    "format": "biome format --write ./src",
+    "check": "biome check --write ./src"
   },
   "dependencies": {
     "next": "15.5.4",
