--- a/biome.json
+++ b/biome.json
@@ -31,6 +31,7 @@
       "suspicious": {
         "noExplicitAny": "off",
         "noArrayIndexKey": "off",
+        "useIterableCallbackReturn": "off",
         "noConsole": {
           "level": "warn",
           "fix": "safe",
@@ -110,12 +111,7 @@
       "enabled": true
     },
     "linter": {
-      "enabled": true,
-      "rules": {
-        "style": {
-          "noUnknownAtRule": "off"
-        }
-      }
+      "enabled": true
     }
   },
   "json": {
