--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "run-p dev:*",
-    "dev:next": "next dev --turbopack",
+    "dev:next": "next dev --turbopack --port 5172",
     "dev:path": "pathpida --ignorePath .gitignore --watch",
     "build": "pathpida --ignorePath .gitignore && next build --turbopack",
-    "start": "next start",
-   "lint": "biome check ./src",
+    "start": "next start --port 5172",
+    "lint": "biome check ./src",
     "lint:fix": "biome lint --write ./src",
     "format": "biome format --write ./src",
     "check": "biome check --write ./src"
@@ -20,12 +20,12 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "typescript": "^5.9.2",
+    "@types/node": "^20.19.18",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@tailwindcss/postcss": "^4.1.13",
+    "tailwindcss": "^4.1.13",
     "@biomejs/biome": "^2.2.4",
     "pathpida": "^0.25.0"
   }
