--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "biome check ./src",
     "lint:fix": "biome lint --write ./src",
     "format": "biome format --write ./src",
-    "check": "biome check --write ./src"
+    "check": "biome check --write ./src",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "15.5.4",
@@ -20,13 +21,14 @@
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
+    "@biomejs/biome": "^2.2.4",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^20.19.18",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@tailwindcss/postcss": "^4.1.13",
+    "husky": "^9.1.7",
+    "pathpida": "^0.25.0",
     "tailwindcss": "^4.1.13",
-    "@biomejs/biome": "^2.2.4",
-    "pathpida": "^0.25.0"
+    "typescript": "^5.9.2"
   }
 }
