--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "run-p dev:*",
-    "dev:next": "next dev --turbopack --port 5172",
+    "dev:next": "next dev --port 5172",
     "dev:path": "pathpida --ignorePath .gitignore --watch",
-    "build": "pathpida --ignorePath .gitignore && next build --turbopack",
+    "build": "pathpida --ignorePath .gitignore && next build",
     "start": "next start --port 4172",
     "lint": "biome check ./src",
     "lint:fix": "biome lint --write ./src",
@@ -15,15 +15,15 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "next": "15.5.4",
+    "next": "^16.0.0",
     "npm-run-all": "^4.1.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.1",
     "@tailwindcss/postcss": "^4.1.16",
-    "@types/node": "^20.19.23",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "husky": "^9.1.7",
