--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "dev:path": "pathpida --ignorePath .gitignore --watch",
     "build": "pathpida --ignorePath .gitignore && next build",
     "start": "next start --port 4172",
-    "lint": "biome check ./src",
-    "lint:fix": "biome lint --write ./src",
+    "lint": "biome check ./src --error-on-warnings",
     "format": "biome format --write ./src",
-    "check": "biome check --write ./src",
-    "prepare": "husky"
+    "fix": "biome check --write ./src",
+    "type-check": "tsc --noEmit --project tsconfig.json"
   },
   "dependencies": {
     "next": "^16.0.7",
@@ -26,7 +25,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "husky": "^9.1.7",
+    "lefthook": "^2.0.8",
     "pathpida": "^0.25.0",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
